--- a/nyonoyo/100084-bedwetting-blunders-at-camp-wellspring-revenge-hypnosis/rus.textile
+++ b/nyonoyo/100084-bedwetting-blunders-at-camp-wellspring-revenge-hypnosis/rus.textile
@@ -1,86 +1,86 @@
-Недержание мочи в постель в лагере Wellspring ~Revenge Hypnosis~
+РќРµРґРµСЂР¶Р°РЅРёРµ РјРѕС‡Рё РІ РїРѕСЃС‚РµР»СЊ РІ Р»Р°РіРµСЂРµ Wellspring ~Revenge Hypnosis~
 
-Автор: nyonoyo
+РђРІС‚РѕСЂ: nyonoyo
 
 *000*2024-04-14 21:08
 
-Вот следующая история о недержании мочи! Не уверена, хочу ли я продолжать это и как долго, но надеюсь, вам понравилось в любом случае.
+Р’РѕС‚ СЃР»РµРґСѓСЋС‰Р°СЏ РёСЃС‚РѕСЂРёСЏ Рѕ РЅРµРґРµСЂР¶Р°РЅРёРё РјРѕС‡Рё! РќРµ СѓРІРµСЂРµРЅР°, С…РѕС‡Сѓ Р»Рё СЏ РїСЂРѕРґРѕР»Р¶Р°С‚СЊ СЌС‚Рѕ Рё РєР°Рє РґРѕР»РіРѕ, РЅРѕ РЅР°РґРµСЋСЃСЊ, РІР°Рј РїРѕРЅСЂР°РІРёР»РѕСЃСЊ РІ Р»СЋР±РѕРј СЃР»СѓС‡Р°Рµ.
 
-Извините, что поздновато. Я вычеркнула оригинальную версию, потому что она мне не понравилась. Также я работала над серией Nijisanji, которую тоже вычеркнула в свете недавних событий и обвинений.
+РР·РІРёРЅРёС‚Рµ, С‡С‚Рѕ РїРѕР·РґРЅРѕРІР°С‚Рѕ. РЇ РІС‹С‡РµСЂРєРЅСѓР»Р° РѕСЂРёРіРёРЅР°Р»СЊРЅСѓСЋ РІРµСЂСЃРёСЋ, РїРѕС‚РѕРјСѓ С‡С‚Рѕ РѕРЅР° РјРЅРµ РЅРµ РїРѕРЅСЂР°РІРёР»Р°СЃСЊ. РўР°РєР¶Рµ СЏ СЂР°Р±РѕС‚Р°Р»Р° РЅР°Рґ СЃРµСЂРёРµР№ Nijisanji, РєРѕС‚РѕСЂСѓСЋ С‚РѕР¶Рµ РІС‹С‡РµСЂРєРЅСѓР»Р° РІ СЃРІРµС‚Рµ РЅРµРґР°РІРЅРёС… СЃРѕР±С‹С‚РёР№ Рё РѕР±РІРёРЅРµРЅРёР№.
 
-Вместо этого я на самом деле думаю сделать новую серию о недержании мочи на основе серии Persona. Если у вас есть какие-либо предложения о том, что бы вы хотели увидеть, пожалуйста, дайте мне знать!
+Р’РјРµСЃС‚Рѕ СЌС‚РѕРіРѕ СЏ РЅР° СЃР°РјРѕРј РґРµР»Рµ РґСѓРјР°СЋ СЃРґРµР»Р°С‚СЊ РЅРѕРІСѓСЋ СЃРµСЂРёСЋ Рѕ РЅРµРґРµСЂР¶Р°РЅРёРё РјРѕС‡Рё РЅР° РѕСЃРЅРѕРІРµ СЃРµСЂРёРё Persona. Р•СЃР»Рё Сѓ РІР°СЃ РµСЃС‚СЊ РєР°РєРёРµ-Р»РёР±Рѕ РїСЂРµРґР»РѕР¶РµРЅРёСЏ Рѕ С‚РѕРј, С‡С‚Рѕ Р±С‹ РІС‹ С…РѕС‚РµР»Рё СѓРІРёРґРµС‚СЊ, РїРѕР¶Р°Р»СѓР№СЃС‚Р°, РґР°Р№С‚Рµ РјРЅРµ Р·РЅР°С‚СЊ!
 
-«Прекратите!»
+В«РџСЂРµРєСЂР°С‚РёС‚Рµ!В»
 
-«Как будто! Эй, девочки, у нас тут маленький ребёнок!» Джекс поманила свою клику, когда она наступила на свою жертву своими чёрными сапогами с высокой посадкой. Надев острый неоготический образ с частично выбритыми волосами, она прижала бедную девочку к земле, когда она подняла её платье.
+В«РљР°Рє Р±СѓРґС‚Рѕ! Р­Р№, РґРµРІРѕС‡РєРё, Сѓ РЅР°СЃ С‚СѓС‚ РјР°Р»РµРЅСЊРєРёР№ СЂРµР±С‘РЅРѕРє!В» Р”Р¶РµРєСЃ РїРѕРјР°РЅРёР»Р° СЃРІРѕСЋ РєР»РёРєСѓ, РєРѕРіРґР° РѕРЅР° РЅР°СЃС‚СѓРїРёР»Р° РЅР° СЃРІРѕСЋ Р¶РµСЂС‚РІСѓ СЃРІРѕРёРјРё С‡С‘СЂРЅС‹РјРё СЃР°РїРѕРіР°РјРё СЃ РІС‹СЃРѕРєРѕР№ РїРѕСЃР°РґРєРѕР№. РќР°РґРµРІ РѕСЃС‚СЂС‹Р№ РЅРµРѕРіРѕС‚РёС‡РµСЃРєРёР№ РѕР±СЂР°Р· СЃ С‡Р°СЃС‚РёС‡РЅРѕ РІС‹Р±СЂРёС‚С‹РјРё РІРѕР»РѕСЃР°РјРё, РѕРЅР° РїСЂРёР¶Р°Р»Р° Р±РµРґРЅСѓСЋ РґРµРІРѕС‡РєСѓ Рє Р·РµРјР»Рµ, РєРѕРіРґР° РѕРЅР° РїРѕРґРЅСЏР»Р° РµС‘ РїР»Р°С‚СЊРµ.
 
-«Просто оставьте меня в покое!» Эми, которая лежала на земле и плакала, страдала от проблем с физическим развитием большую часть своей жизни, что привело не только к тому, что она была меньше большинства подростков, но и к проблемам с контролем мочевого пузыря. Долгое время она очень старательно скрывала свои подкладки под длинными струящимися платьями пастельных тонов. Но теперь она проигрывает битву за то, чтобы спрятать свой мокрый подгузник в летнем лагере против самого большого хулигана школы.
+В«РџСЂРѕСЃС‚Рѕ РѕСЃС‚Р°РІСЊС‚Рµ РјРµРЅСЏ РІ РїРѕРєРѕРµ!В» Р­РјРё, РєРѕС‚РѕСЂР°СЏ Р»РµР¶Р°Р»Р° РЅР° Р·РµРјР»Рµ Рё РїР»Р°РєР°Р»Р°, СЃС‚СЂР°РґР°Р»Р° РѕС‚ РїСЂРѕР±Р»РµРј СЃ С„РёР·РёС‡РµСЃРєРёРј СЂР°Р·РІРёС‚РёРµРј Р±РѕР»СЊС€СѓСЋ С‡Р°СЃС‚СЊ СЃРІРѕРµР№ Р¶РёР·РЅРё, С‡С‚Рѕ РїСЂРёРІРµР»Рѕ РЅРµ С‚РѕР»СЊРєРѕ Рє С‚РѕРјСѓ, С‡С‚Рѕ РѕРЅР° Р±С‹Р»Р° РјРµРЅСЊС€Рµ Р±РѕР»СЊС€РёРЅСЃС‚РІР° РїРѕРґСЂРѕСЃС‚РєРѕРІ, РЅРѕ Рё Рє РїСЂРѕР±Р»РµРјР°Рј СЃ РєРѕРЅС‚СЂРѕР»РµРј РјРѕС‡РµРІРѕРіРѕ РїСѓР·С‹СЂСЏ. Р”РѕР»РіРѕРµ РІСЂРµРјСЏ РѕРЅР° РѕС‡РµРЅСЊ СЃС‚Р°СЂР°С‚РµР»СЊРЅРѕ СЃРєСЂС‹РІР°Р»Р° СЃРІРѕРё РїРѕРґРєР»Р°РґРєРё РїРѕРґ РґР»РёРЅРЅС‹РјРё СЃС‚СЂСѓСЏС‰РёРјРёСЃСЏ РїР»Р°С‚СЊСЏРјРё РїР°СЃС‚РµР»СЊРЅС‹С… С‚РѕРЅРѕРІ. РќРѕ С‚РµРїРµСЂСЊ РѕРЅР° РїСЂРѕРёРіСЂС‹РІР°РµС‚ Р±РёС‚РІСѓ Р·Р° С‚Рѕ, С‡С‚РѕР±С‹ СЃРїСЂСЏС‚Р°С‚СЊ СЃРІРѕР№ РјРѕРєСЂС‹Р№ РїРѕРґРіСѓР·РЅРёРє РІ Р»РµС‚РЅРµРј Р»Р°РіРµСЂРµ РїСЂРѕС‚РёРІ СЃР°РјРѕРіРѕ Р±РѕР»СЊС€РѕРіРѕ С…СѓР»РёРіР°РЅР° С€РєРѕР»С‹.
 
-«Что не так? Это может случиться с каждым, верно? Не нужно стыдиться, верно?» — поддразнил Джекс. Как по команде, остальная часть её группы окружила Эми.
+В«Р§С‚Рѕ РЅРµ С‚Р°Рє? Р­С‚Рѕ РјРѕР¶РµС‚ СЃР»СѓС‡РёС‚СЊСЃСЏ СЃ РєР°Р¶РґС‹Рј, РІРµСЂРЅРѕ? РќРµ РЅСѓР¶РЅРѕ СЃС‚С‹РґРёС‚СЊСЃСЏ, РІРµСЂРЅРѕ?В» вЂ” РїРѕРґРґСЂР°Р·РЅРёР» Р”Р¶РµРєСЃ. РљР°Рє РїРѕ РєРѕРјР°РЅРґРµ, РѕСЃС‚Р°Р»СЊРЅР°СЏ С‡Р°СЃС‚СЊ РµС‘ РіСЂСѓРїРїС‹ РѕРєСЂСѓР¶РёР»Р° Р­РјРё.
 
-«Ой, какая милашка!» — проворковала Элли. Происходя из очень обеспеченной среды, она первой присоединилась к группе Джекса, способной принуждать людей деньгами, только чтобы подставить их под падение. Установив зрительный контакт с Эми, она изобразила, как сосёт большой палец и плачет.
+В«РћР№, РєР°РєР°СЏ РјРёР»Р°С€РєР°!В» вЂ” РїСЂРѕРІРѕСЂРєРѕРІР°Р»Р° Р­Р»Р»Рё. РџСЂРѕРёСЃС…РѕРґСЏ РёР· РѕС‡РµРЅСЊ РѕР±РµСЃРїРµС‡РµРЅРЅРѕР№ СЃСЂРµРґС‹, РѕРЅР° РїРµСЂРІРѕР№ РїСЂРёСЃРѕРµРґРёРЅРёР»Р°СЃСЊ Рє РіСЂСѓРїРїРµ Р”Р¶РµРєСЃР°, СЃРїРѕСЃРѕР±РЅРѕР№ РїСЂРёРЅСѓР¶РґР°С‚СЊ Р»СЋРґРµР№ РґРµРЅСЊРіР°РјРё, С‚РѕР»СЊРєРѕ С‡С‚РѕР±С‹ РїРѕРґСЃС‚Р°РІРёС‚СЊ РёС… РїРѕРґ РїР°РґРµРЅРёРµ. РЈСЃС‚Р°РЅРѕРІРёРІ Р·СЂРёС‚РµР»СЊРЅС‹Р№ РєРѕРЅС‚Р°РєС‚ СЃ Р­РјРё, РѕРЅР° РёР·РѕР±СЂР°Р·РёР»Р°, РєР°Рє СЃРѕСЃС‘С‚ Р±РѕР»СЊС€РѕР№ РїР°Р»РµС† Рё РїР»Р°С‡РµС‚.
 
-«Чёрт, она действительно промокла», — сказала Зои, сжимая подгузник Эми. Она усмехнулась про себя, думая о том, что есть зрители её кам-шоу, которые умрут, чтобы увидеть её такой. Зои, будучи отставшей на один класс, всегда была рада использовать своё тело в качестве товара и в какой-то степени тоже становилась странной со своими извращениями. Её креативность была ключевым игроком во многих тактиках издевательств группы.
+В«Р§С‘СЂС‚, РѕРЅР° РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ РїСЂРѕРјРѕРєР»Р°В», вЂ” СЃРєР°Р·Р°Р»Р° Р—РѕРё, СЃР¶РёРјР°СЏ РїРѕРґРіСѓР·РЅРёРє Р­РјРё. РћРЅР° СѓСЃРјРµС…РЅСѓР»Р°СЃСЊ РїСЂРѕ СЃРµР±СЏ, РґСѓРјР°СЏ Рѕ С‚РѕРј, С‡С‚Рѕ РµСЃС‚СЊ Р·СЂРёС‚РµР»Рё РµС‘ РєР°Рј-С€РѕСѓ, РєРѕС‚РѕСЂС‹Рµ СѓРјСЂСѓС‚, С‡С‚РѕР±С‹ СѓРІРёРґРµС‚СЊ РµС‘ С‚Р°РєРѕР№. Р—РѕРё, Р±СѓРґСѓС‡Рё РѕС‚СЃС‚Р°РІС€РµР№ РЅР° РѕРґРёРЅ РєР»Р°СЃСЃ, РІСЃРµРіРґР° Р±С‹Р»Р° СЂР°РґР° РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ СЃРІРѕС‘ С‚РµР»Рѕ РІ РєР°С‡РµСЃС‚РІРµ С‚РѕРІР°СЂР° Рё РІ РєР°РєРѕР№-С‚Рѕ СЃС‚РµРїРµРЅРё С‚РѕР¶Рµ СЃС‚Р°РЅРѕРІРёР»Р°СЃСЊ СЃС‚СЂР°РЅРЅРѕР№ СЃРѕ СЃРІРѕРёРјРё РёР·РІСЂР°С‰РµРЅРёСЏРјРё. Р•С‘ РєСЂРµР°С‚РёРІРЅРѕСЃС‚СЊ Р±С‹Р»Р° РєР»СЋС‡РµРІС‹Рј РёРіСЂРѕРєРѕРј РІРѕ РјРЅРѕРіРёС… С‚Р°РєС‚РёРєР°С… РёР·РґРµРІР°С‚РµР»СЊСЃС‚РІ РіСЂСѓРїРїС‹.
 
-«Эй, не слишком ли это далеко?» — спросила Кара, младшая сестра Джекса, с некоторой обеспокоенностью. Она редко участвовала в каких-либо выходках группы, часто выступая в качестве голоса разума. Единственной причиной, по которой она общалась с ними, было то, что она восхищалась тем, насколько сильной и уверенной в себе была её старшая сестра, и даже зашла так далеко, что стала подражать её внешнему виду.
+В«Р­Р№, РЅРµ СЃР»РёС€РєРѕРј Р»Рё СЌС‚Рѕ РґР°Р»РµРєРѕ?В» вЂ” СЃРїСЂРѕСЃРёР»Р° РљР°СЂР°, РјР»Р°РґС€Р°СЏ СЃРµСЃС‚СЂР° Р”Р¶РµРєСЃР°, СЃ РЅРµРєРѕС‚РѕСЂРѕР№ РѕР±РµСЃРїРѕРєРѕРµРЅРЅРѕСЃС‚СЊСЋ. РћРЅР° СЂРµРґРєРѕ СѓС‡Р°СЃС‚РІРѕРІР°Р»Р° РІ РєР°РєРёС…-Р»РёР±Рѕ РІС‹С…РѕРґРєР°С… РіСЂСѓРїРїС‹, С‡Р°СЃС‚Рѕ РІС‹СЃС‚СѓРїР°СЏ РІ РєР°С‡РµСЃС‚РІРµ РіРѕР»РѕСЃР° СЂР°Р·СѓРјР°. Р•РґРёРЅСЃС‚РІРµРЅРЅРѕР№ РїСЂРёС‡РёРЅРѕР№, РїРѕ РєРѕС‚РѕСЂРѕР№ РѕРЅР° РѕР±С‰Р°Р»Р°СЃСЊ СЃ РЅРёРјРё, Р±С‹Р»Рѕ С‚Рѕ, С‡С‚Рѕ РѕРЅР° РІРѕСЃС…РёС‰Р°Р»Р°СЃСЊ С‚РµРј, РЅР°СЃРєРѕР»СЊРєРѕ СЃРёР»СЊРЅРѕР№ Рё СѓРІРµСЂРµРЅРЅРѕР№ РІ СЃРµР±Рµ Р±С‹Р»Р° РµС‘ СЃС‚Р°СЂС€Р°СЏ СЃРµСЃС‚СЂР°, Рё РґР°Р¶Рµ Р·Р°С€Р»Р° С‚Р°Рє РґР°Р»РµРєРѕ, С‡С‚Рѕ СЃС‚Р°Р»Р° РїРѕРґСЂР°Р¶Р°С‚СЊ РµС‘ РІРЅРµС€РЅРµРјСѓ РІРёРґСѓ.
 
-«ЭЙ! Что там происходит?!» Одна из вожатых лагеря начала приближаться к месту происшествия.
+В«Р­Р™! Р§С‚Рѕ С‚Р°Рј РїСЂРѕРёСЃС…РѕРґРёС‚?!В» РћРґРЅР° РёР· РІРѕР¶Р°С‚С‹С… Р»Р°РіРµСЂСЏ РЅР°С‡Р°Р»Р° РїСЂРёР±Р»РёР¶Р°С‚СЊСЃСЏ Рє РјРµСЃС‚Сѓ РїСЂРѕРёСЃС€РµСЃС‚РІРёСЏ.
 
-«Чёрт, вечеринка окончена, девочки. Пора убираться», — приказала Джакс, и девочки быстрым шагом последовали за ней.
+В«Р§С‘СЂС‚, РІРµС‡РµСЂРёРЅРєР° РѕРєРѕРЅС‡РµРЅР°, РґРµРІРѕС‡РєРё. РџРѕСЂР° СѓР±РёСЂР°С‚СЊСЃСЏВ», вЂ” РїСЂРёРєР°Р·Р°Р»Р° Р”Р¶Р°РєСЃ, Рё РґРµРІРѕС‡РєРё Р±С‹СЃС‚СЂС‹Рј С€Р°РіРѕРј РїРѕСЃР»РµРґРѕРІР°Р»Рё Р·Р° РЅРµР№.
 
-«Эй, дорогая, всё в порядке?» — успокоила вожатая плачущую девочку.
+В«Р­Р№, РґРѕСЂРѕРіР°СЏ, РІСЃС‘ РІ РїРѕСЂСЏРґРєРµ?В» вЂ” СѓСЃРїРѕРєРѕРёР»Р° РІРѕР¶Р°С‚Р°СЏ РїР»Р°С‡СѓС‰СѓСЋ РґРµРІРѕС‡РєСѓ.
 
-«Я-я...» — она не могла заставить себя ничего сказать, пока вожатая вела её к медсестре, однако внутри у неё вертелась одна мысль.
+В«РЇ-СЏ...В» вЂ” РѕРЅР° РЅРµ РјРѕРіР»Р° Р·Р°СЃС‚Р°РІРёС‚СЊ СЃРµР±СЏ РЅРёС‡РµРіРѕ СЃРєР°Р·Р°С‚СЊ, РїРѕРєР° РІРѕР¶Р°С‚Р°СЏ РІРµР»Р° РµС‘ Рє РјРµРґСЃРµСЃС‚СЂРµ, РѕРґРЅР°РєРѕ РІРЅСѓС‚СЂРё Сѓ РЅРµС‘ РІРµСЂС‚РµР»Р°СЃСЊ РѕРґРЅР° РјС‹СЃР»СЊ.
 
-«Я заставлю их заплатить».
+В«РЇ Р·Р°СЃС‚Р°РІР»СЋ РёС… Р·Р°РїР»Р°С‚РёС‚СЊВ».
 
-«Это было слишком смешно!» Джакс расхохоталась, натягивая белый укороченный топ на большую грудь, в остальном её фиолетовые шорты были видны.
+В«Р­С‚Рѕ Р±С‹Р»Рѕ СЃР»РёС€РєРѕРј СЃРјРµС€РЅРѕ!В» Р”Р¶Р°РєСЃ СЂР°СЃС…РѕС…РѕС‚Р°Р»Р°СЃСЊ, РЅР°С‚СЏРіРёРІР°СЏ Р±РµР»С‹Р№ СѓРєРѕСЂРѕС‡РµРЅРЅС‹Р№ С‚РѕРї РЅР° Р±РѕР»СЊС€СѓСЋ РіСЂСѓРґСЊ, РІ РѕСЃС‚Р°Р»СЊРЅРѕРј РµС‘ С„РёРѕР»РµС‚РѕРІС‹Рµ С€РѕСЂС‚С‹ Р±С‹Р»Рё РІРёРґРЅС‹.
 
-«Иногда вы все слишком много перебарщиваете», — раскритиковала Кара группу, одеваясь в пижаму, которая соответствовала пижаме её сестры, за исключением нижнего белья, выбрав вместо неё синие трусики-шорты. «За это мы можем серьёзно попасть в горячую воду».
+В«РРЅРѕРіРґР° РІС‹ РІСЃРµ СЃР»РёС€РєРѕРј РјРЅРѕРіРѕ РїРµСЂРµР±Р°СЂС‰РёРІР°РµС‚РµВ», вЂ” СЂР°СЃРєСЂРёС‚РёРєРѕРІР°Р»Р° РљР°СЂР° РіСЂСѓРїРїСѓ, РѕРґРµРІР°СЏСЃСЊ РІ РїРёР¶Р°РјСѓ, РєРѕС‚РѕСЂР°СЏ СЃРѕРѕС‚РІРµС‚СЃС‚РІРѕРІР°Р»Р° РїРёР¶Р°РјРµ РµС‘ СЃРµСЃС‚СЂС‹, Р·Р° РёСЃРєР»СЋС‡РµРЅРёРµРј РЅРёР¶РЅРµРіРѕ Р±РµР»СЊСЏ, РІС‹Р±СЂР°РІ РІРјРµСЃС‚Рѕ РЅРµС‘ СЃРёРЅРёРµ С‚СЂСѓСЃРёРєРё-С€РѕСЂС‚С‹. В«Р—Р° СЌС‚Рѕ РјС‹ РјРѕР¶РµРј СЃРµСЂСЊС‘Р·РЅРѕ РїРѕРїР°СЃС‚СЊ РІ РіРѕСЂСЏС‡СѓСЋ РІРѕРґСѓВ».
 
-«Не волнуйся, малышка». Зои натянула пару сверкающих розовых спортивных шорт, но в остальном была голой. «Ты видела её лицо? У неё не хватит смелости что-либо с нами сделать, особенно теперь, когда мы знаем её маленький секрет».
+В«РќРµ РІРѕР»РЅСѓР№СЃСЏ, РјР°Р»С‹С€РєР°В». Р—РѕРё РЅР°С‚СЏРЅСѓР»Р° РїР°СЂСѓ СЃРІРµСЂРєР°СЋС‰РёС… СЂРѕР·РѕРІС‹С… СЃРїРѕСЂС‚РёРІРЅС‹С… С€РѕСЂС‚, РЅРѕ РІ РѕСЃС‚Р°Р»СЊРЅРѕРј Р±С‹Р»Р° РіРѕР»РѕР№. В«РўС‹ РІРёРґРµР»Р° РµС‘ Р»РёС†Рѕ? РЈ РЅРµС‘ РЅРµ С…РІР°С‚РёС‚ СЃРјРµР»РѕСЃС‚Рё С‡С‚Рѕ-Р»РёР±Рѕ СЃ РЅР°РјРё СЃРґРµР»Р°С‚СЊ, РѕСЃРѕР±РµРЅРЅРѕ С‚РµРїРµСЂСЊ, РєРѕРіРґР° РјС‹ Р·РЅР°РµРј РµС‘ РјР°Р»РµРЅСЊРєРёР№ СЃРµРєСЂРµС‚В».
 
-«К тому же, если она попытается что-то сделать, я могу просто сделать так, чтобы каждое утро у её входной двери появлялась упаковка подгузников». Элли надменно рассмеялась. Её белое с золотым кружевом платье торчало, как больной большой палец, едва скрывая её такие же роскошные трусики с серебристым кружевом.
+В«Рљ С‚РѕРјСѓ Р¶Рµ, РµСЃР»Рё РѕРЅР° РїРѕРїС‹С‚Р°РµС‚СЃСЏ С‡С‚Рѕ-С‚Рѕ СЃРґРµР»Р°С‚СЊ, СЏ РјРѕРіСѓ РїСЂРѕСЃС‚Рѕ СЃРґРµР»Р°С‚СЊ С‚Р°Рє, С‡С‚РѕР±С‹ РєР°Р¶РґРѕРµ СѓС‚СЂРѕ Сѓ РµС‘ РІС…РѕРґРЅРѕР№ РґРІРµСЂРё РїРѕСЏРІР»СЏР»Р°СЃСЊ СѓРїР°РєРѕРІРєР° РїРѕРґРіСѓР·РЅРёРєРѕРІВ». Р­Р»Р»Рё РЅР°РґРјРµРЅРЅРѕ СЂР°СЃСЃРјРµСЏР»Р°СЃСЊ. Р•С‘ Р±РµР»РѕРµ СЃ Р·РѕР»РѕС‚С‹Рј РєСЂСѓР¶РµРІРѕРј РїР»Р°С‚СЊРµ С‚РѕСЂС‡Р°Р»Рѕ, РєР°Рє Р±РѕР»СЊРЅРѕР№ Р±РѕР»СЊС€РѕР№ РїР°Р»РµС†, РµРґРІР° СЃРєСЂС‹РІР°СЏ РµС‘ С‚Р°РєРёРµ Р¶Рµ СЂРѕСЃРєРѕС€РЅС‹Рµ С‚СЂСѓСЃРёРєРё СЃ СЃРµСЂРµР±СЂРёСЃС‚С‹Рј РєСЂСѓР¶РµРІРѕРј.
 
-«Как скажете, ребята», — пренебрежительно сказала младшая сестра. Группа лениво болтала между собой, прежде чем отключится в своих кроватях.
+В«РљР°Рє СЃРєР°Р¶РµС‚Рµ, СЂРµР±СЏС‚Р°В», вЂ” РїСЂРµРЅРµР±СЂРµР¶РёС‚РµР»СЊРЅРѕ СЃРєР°Р·Р°Р»Р° РјР»Р°РґС€Р°СЏ СЃРµСЃС‚СЂР°. Р“СЂСѓРїРїР° Р»РµРЅРёРІРѕ Р±РѕР»С‚Р°Р»Р° РјРµР¶РґСѓ СЃРѕР±РѕР№, РїСЂРµР¶РґРµ С‡РµРј РѕС‚РєР»СЋС‡РёС‚СЃСЏ РІ СЃРІРѕРёС… РєСЂРѕРІР°С‚СЏС….
 
-Эми осторожно закрыла за собой дверь, когда вошла в домик хулиганов. Она проверила время на своём телефоне, прежде чем увеличить громкость и поставить его в центр каюты. Запустив YouTube, она включила видео под названием «Гипноз сна | Ночное недержание мочи/слабый мочевой пузырь». Невысокая девушка сомневалась, сработает ли гипноз. Она провела часы в поисках в Интернете настоящего аудио гипноза, пока не нашла этот, комментарии к которому клялись, что он действительно работает.
+Р­РјРё РѕСЃС‚РѕСЂРѕР¶РЅРѕ Р·Р°РєСЂС‹Р»Р° Р·Р° СЃРѕР±РѕР№ РґРІРµСЂСЊ, РєРѕРіРґР° РІРѕС€Р»Р° РІ РґРѕРјРёРє С…СѓР»РёРіР°РЅРѕРІ. РћРЅР° РїСЂРѕРІРµСЂРёР»Р° РІСЂРµРјСЏ РЅР° СЃРІРѕС‘Рј С‚РµР»РµС„РѕРЅРµ, РїСЂРµР¶РґРµ С‡РµРј СѓРІРµР»РёС‡РёС‚СЊ РіСЂРѕРјРєРѕСЃС‚СЊ Рё РїРѕСЃС‚Р°РІРёС‚СЊ РµРіРѕ РІ С†РµРЅС‚СЂ РєР°СЋС‚С‹. Р—Р°РїСѓСЃС‚РёРІ YouTube, РѕРЅР° РІРєР»СЋС‡РёР»Р° РІРёРґРµРѕ РїРѕРґ РЅР°Р·РІР°РЅРёРµРј В«Р“РёРїРЅРѕР· СЃРЅР° | РќРѕС‡РЅРѕРµ РЅРµРґРµСЂР¶Р°РЅРёРµ РјРѕС‡Рё/СЃР»Р°Р±С‹Р№ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊВ». РќРµРІС‹СЃРѕРєР°СЏ РґРµРІСѓС€РєР° СЃРѕРјРЅРµРІР°Р»Р°СЃСЊ, СЃСЂР°Р±РѕС‚Р°РµС‚ Р»Рё РіРёРїРЅРѕР·. РћРЅР° РїСЂРѕРІРµР»Р° С‡Р°СЃС‹ РІ РїРѕРёСЃРєР°С… РІ РРЅС‚РµСЂРЅРµС‚Рµ РЅР°СЃС‚РѕСЏС‰РµРіРѕ Р°СѓРґРёРѕ РіРёРїРЅРѕР·Р°, РїРѕРєР° РЅРµ РЅР°С€Р»Р° СЌС‚РѕС‚, РєРѕРјРјРµРЅС‚Р°СЂРёРё Рє РєРѕС‚РѕСЂРѕРјСѓ РєР»СЏР»РёСЃСЊ, С‡С‚Рѕ РѕРЅ РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ СЂР°Р±РѕС‚Р°РµС‚.
 
-Беспокоясь о том, что её поймают, и волнуясь о перспективе превратить своих обидчиков в таких же писюнов, как она сама, она терпеливо сидела на протяжении всего видео. Примерно через час Эми начала терять терпение, не уверенная, добьётся ли она успеха, но именно тогда Джекс начал ворчать и шаркать ногами. Сначала Эми подумала, что обидчик просыпается, пока не услышала слабое шипение, исходящее от неё. Через несколько секунд похожие звуки раздались из каждой кровати. «Ни за что…», — подумала она про себя, прежде чем осторожно проверить простыни каждой девочки. Мокро. Мокро. Мокро. Мокро.
+Р‘РµСЃРїРѕРєРѕСЏСЃСЊ Рѕ С‚РѕРј, С‡С‚Рѕ РµС‘ РїРѕР№РјР°СЋС‚, Рё РІРѕР»РЅСѓСЏСЃСЊ Рѕ РїРµСЂСЃРїРµРєС‚РёРІРµ РїСЂРµРІСЂР°С‚РёС‚СЊ СЃРІРѕРёС… РѕР±РёРґС‡РёРєРѕРІ РІ С‚Р°РєРёС… Р¶Рµ РїРёСЃСЋРЅРѕРІ, РєР°Рє РѕРЅР° СЃР°РјР°, РѕРЅР° С‚РµСЂРїРµР»РёРІРѕ СЃРёРґРµР»Р° РЅР° РїСЂРѕС‚СЏР¶РµРЅРёРё РІСЃРµРіРѕ РІРёРґРµРѕ. РџСЂРёРјРµСЂРЅРѕ С‡РµСЂРµР· С‡Р°СЃ Р­РјРё РЅР°С‡Р°Р»Р° С‚РµСЂСЏС‚СЊ С‚РµСЂРїРµРЅРёРµ, РЅРµ СѓРІРµСЂРµРЅРЅР°СЏ, РґРѕР±СЊС‘С‚СЃСЏ Р»Рё РѕРЅР° СѓСЃРїРµС…Р°, РЅРѕ РёРјРµРЅРЅРѕ С‚РѕРіРґР° Р”Р¶РµРєСЃ РЅР°С‡Р°Р» РІРѕСЂС‡Р°С‚СЊ Рё С€Р°СЂРєР°С‚СЊ РЅРѕРіР°РјРё. РЎРЅР°С‡Р°Р»Р° Р­РјРё РїРѕРґСѓРјР°Р»Р°, С‡С‚Рѕ РѕР±РёРґС‡РёРє РїСЂРѕСЃС‹РїР°РµС‚СЃСЏ, РїРѕРєР° РЅРµ СѓСЃР»С‹С€Р°Р»Р° СЃР»Р°Р±РѕРµ С€РёРїРµРЅРёРµ, РёСЃС…РѕРґСЏС‰РµРµ РѕС‚ РЅРµС‘. Р§РµСЂРµР· РЅРµСЃРєРѕР»СЊРєРѕ СЃРµРєСѓРЅРґ РїРѕС…РѕР¶РёРµ Р·РІСѓРєРё СЂР°Р·РґР°Р»РёСЃСЊ РёР· РєР°Р¶РґРѕР№ РєСЂРѕРІР°С‚Рё. В«РќРё Р·Р° С‡С‚РѕвЂ¦В», вЂ” РїРѕРґСѓРјР°Р»Р° РѕРЅР° РїСЂРѕ СЃРµР±СЏ, РїСЂРµР¶РґРµ С‡РµРј РѕСЃС‚РѕСЂРѕР¶РЅРѕ РїСЂРѕРІРµСЂРёС‚СЊ РїСЂРѕСЃС‚С‹РЅРё РєР°Р¶РґРѕР№ РґРµРІРѕС‡РєРё. РњРѕРєСЂРѕ. РњРѕРєСЂРѕ. РњРѕРєСЂРѕ. РњРѕРєСЂРѕ.
 
-«Да!» — воскликнула Эми, прежде чем прикрыть рот.
+В«Р”Р°!В» вЂ” РІРѕСЃРєР»РёРєРЅСѓР»Р° Р­РјРё, РїСЂРµР¶РґРµ С‡РµРј РїСЂРёРєСЂС‹С‚СЊ СЂРѕС‚.
 
-«Хм-м-м», — простонала Кара, когда ещё одна маленькая струйка вытекла из её мочевого пузыря и добавилась к луже под ней. Она перевернулась на бок и тихонько захрапела.
+В«РҐРј-Рј-РјВ», вЂ” РїСЂРѕСЃС‚РѕРЅР°Р»Р° РљР°СЂР°, РєРѕРіРґР° РµС‰С‘ РѕРґРЅР° РјР°Р»РµРЅСЊРєР°СЏ СЃС‚СЂСѓР№РєР° РІС‹С‚РµРєР»Р° РёР· РµС‘ РјРѕС‡РµРІРѕРіРѕ РїСѓР·С‹СЂСЏ Рё РґРѕР±Р°РІРёР»Р°СЃСЊ Рє Р»СѓР¶Рµ РїРѕРґ РЅРµР№. РћРЅР° РїРµСЂРµРІРµСЂРЅСѓР»Р°СЃСЊ РЅР° Р±РѕРє Рё С‚РёС…РѕРЅСЊРєРѕ Р·Р°С…СЂР°РїРµР»Р°.
 
-«О, не могу дождаться этого утра», — радостно подумала Эми. Не жалея времени, она схватила телефон и сфотографировала девушек, прежде чем скрыться с места преступления.
+В«Рћ, РЅРµ РјРѕРіСѓ РґРѕР¶РґР°С‚СЊСЃСЏ СЌС‚РѕРіРѕ СѓС‚СЂР°В», вЂ” СЂР°РґРѕСЃС‚РЅРѕ РїРѕРґСѓРјР°Р»Р° Р­РјРё. РќРµ Р¶Р°Р»РµСЏ РІСЂРµРјРµРЅРё, РѕРЅР° СЃС…РІР°С‚РёР»Р° С‚РµР»РµС„РѕРЅ Рё СЃС„РѕС‚РѕРіСЂР°С„РёСЂРѕРІР°Р»Р° РґРµРІСѓС€РµРє, РїСЂРµР¶РґРµ С‡РµРј СЃРєСЂС‹С‚СЊСЃСЏ СЃ РјРµСЃС‚Р° РїСЂРµСЃС‚СѓРїР»РµРЅРёСЏ.
 
-«КАКОГО ХРЕНА?!» — закричала Джакс во все лёгкие, напугав остальных девушек. Постельное бельё полностью промокло, и лужа стала достаточно большой, чтобы намочить её топ сзади.
+В«РљРђРљРћР“Рћ РҐР Р•РќРђ?!В» вЂ” Р·Р°РєСЂРёС‡Р°Р»Р° Р”Р¶Р°РєСЃ РІРѕ РІСЃРµ Р»С‘РіРєРёРµ, РЅР°РїСѓРіР°РІ РѕСЃС‚Р°Р»СЊРЅС‹С… РґРµРІСѓС€РµРє. РџРѕСЃС‚РµР»СЊРЅРѕРµ Р±РµР»СЊС‘ РїРѕР»РЅРѕСЃС‚СЊСЋ РїСЂРѕРјРѕРєР»Рѕ, Рё Р»СѓР¶Р° СЃС‚Р°Р»Р° РґРѕСЃС‚Р°С‚РѕС‡РЅРѕ Р±РѕР»СЊС€РѕР№, С‡С‚РѕР±С‹ РЅР°РјРѕС‡РёС‚СЊ РµС‘ С‚РѕРї СЃР·Р°РґРё.
 
-«Ммм, что происходит? А-а?» Кара проснулась, прежде чем почувствовала, что всё её тело мокрое. Сев, она увидела, что всё её тело мокрое от мочи, мокрое от того, что она всю ночь ворочалась в луже. Её упругие сиськи торчали из её теперь жёлтого укороченного топа.
+В«РњРјРј, С‡С‚Рѕ РїСЂРѕРёСЃС…РѕРґРёС‚? Рђ-Р°?В» РљР°СЂР° РїСЂРѕСЃРЅСѓР»Р°СЃСЊ, РїСЂРµР¶РґРµ С‡РµРј РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р°, С‡С‚Рѕ РІСЃС‘ РµС‘ С‚РµР»Рѕ РјРѕРєСЂРѕРµ. РЎРµРІ, РѕРЅР° СѓРІРёРґРµР»Р°, С‡С‚Рѕ РІСЃС‘ РµС‘ С‚РµР»Рѕ РјРѕРєСЂРѕРµ РѕС‚ РјРѕС‡Рё, РјРѕРєСЂРѕРµ РѕС‚ С‚РѕРіРѕ, С‡С‚Рѕ РѕРЅР° РІСЃСЋ РЅРѕС‡СЊ РІРѕСЂРѕС‡Р°Р»Р°СЃСЊ РІ Р»СѓР¶Рµ. Р•С‘ СѓРїСЂСѓРіРёРµ СЃРёСЃСЊРєРё С‚РѕСЂС‡Р°Р»Рё РёР· РµС‘ С‚РµРїРµСЂСЊ Р¶С‘Р»С‚РѕРіРѕ СѓРєРѕСЂРѕС‡РµРЅРЅРѕРіРѕ С‚РѕРїР°.
 
-«Ого, это много». Зои уставилась на свои мокрые шорты и постельное бельё, в равной степени возбуждённая и смущённая, когда она пыталась обнаружить унизительный новый фетиш.
+В«РћРіРѕ, СЌС‚Рѕ РјРЅРѕРіРѕВ». Р—РѕРё СѓСЃС‚Р°РІРёР»Р°СЃСЊ РЅР° СЃРІРѕРё РјРѕРєСЂС‹Рµ С€РѕСЂС‚С‹ Рё РїРѕСЃС‚РµР»СЊРЅРѕРµ Р±РµР»СЊС‘, РІ СЂР°РІРЅРѕР№ СЃС‚РµРїРµРЅРё РІРѕР·Р±СѓР¶РґС‘РЅРЅР°СЏ Рё СЃРјСѓС‰С‘РЅРЅР°СЏ, РєРѕРіРґР° РѕРЅР° РїС‹С‚Р°Р»Р°СЃСЊ РѕР±РЅР°СЂСѓР¶РёС‚СЊ СѓРЅРёР·РёС‚РµР»СЊРЅС‹Р№ РЅРѕРІС‹Р№ С„РµС‚РёС€.
 
-«Тьфу, ты хоть представляешь, сколько стоит эта одежда?» Элли заскулила, её моча поднялась по её животу во сне, полностью пропитав перёд её роскошного платья.
+В«РўСЊС„Сѓ, С‚С‹ С…РѕС‚СЊ РїСЂРµРґСЃС‚Р°РІР»СЏРµС€СЊ, СЃРєРѕР»СЊРєРѕ СЃС‚РѕРёС‚ СЌС‚Р° РѕРґРµР¶РґР°?В» Р­Р»Р»Рё Р·Р°СЃРєСѓР»РёР»Р°, РµС‘ РјРѕС‡Р° РїРѕРґРЅСЏР»Р°СЃСЊ РїРѕ РµС‘ Р¶РёРІРѕС‚Сѓ РІРѕ СЃРЅРµ, РїРѕР»РЅРѕСЃС‚СЊСЋ РїСЂРѕРїРёС‚Р°РІ РїРµСЂС‘Рґ РµС‘ СЂРѕСЃРєРѕС€РЅРѕРіРѕ РїР»Р°С‚СЊСЏ.
 
-«Девочки, вставайте!» — крикнула снаружи воспитательница лагеря. «Нам нужно обсудить ваши вчерашние действия с руководителем лагеря». В панике девочки забрались обратно под простыни, когда вошла воспитательница. «Что случилось? Поторопись и вылезай из кровати».
+В«Р”РµРІРѕС‡РєРё, РІСЃС‚Р°РІР°Р№С‚Рµ!В» вЂ” РєСЂРёРєРЅСѓР»Р° СЃРЅР°СЂСѓР¶Рё РІРѕСЃРїРёС‚Р°С‚РµР»СЊРЅРёС†Р° Р»Р°РіРµСЂСЏ. В«РќР°Рј РЅСѓР¶РЅРѕ РѕР±СЃСѓРґРёС‚СЊ РІР°С€Рё РІС‡РµСЂР°С€РЅРёРµ РґРµР№СЃС‚РІРёСЏ СЃ СЂСѓРєРѕРІРѕРґРёС‚РµР»РµРј Р»Р°РіРµСЂСЏВ». Р’ РїР°РЅРёРєРµ РґРµРІРѕС‡РєРё Р·Р°Р±СЂР°Р»РёСЃСЊ РѕР±СЂР°С‚РЅРѕ РїРѕРґ РїСЂРѕСЃС‚С‹РЅРё, РєРѕРіРґР° РІРѕС€Р»Р° РІРѕСЃРїРёС‚Р°С‚РµР»СЊРЅРёС†Р°. В«Р§С‚Рѕ СЃР»СѓС‡РёР»РѕСЃСЊ? РџРѕС‚РѕСЂРѕРїРёСЃСЊ Рё РІС‹Р»РµР·Р°Р№ РёР· РєСЂРѕРІР°С‚РёВ».
 
-«Д-дай нам секунду, ладно?» — пробормотал Джекс. «Сначала нам нужно переодеться».
+В«Р”-РґР°Р№ РЅР°Рј СЃРµРєСѓРЅРґСѓ, Р»Р°РґРЅРѕ?В» вЂ” РїСЂРѕР±РѕСЂРјРѕС‚Р°Р» Р”Р¶РµРєСЃ. В«РЎРЅР°С‡Р°Р»Р° РЅР°Рј РЅСѓР¶РЅРѕ РїРµСЂРµРѕРґРµС‚СЊСЃСЏВ».
 
-«Хм, странно с твоей стороны заботиться о скромности», — пошутила воспитательница, прислонившись спиной к стене и приподняв шляпу. «Не позволяй мне тебя останавливать».
+В«РҐРј, СЃС‚СЂР°РЅРЅРѕ СЃ С‚РІРѕРµР№ СЃС‚РѕСЂРѕРЅС‹ Р·Р°Р±РѕС‚РёС‚СЊСЃСЏ Рѕ СЃРєСЂРѕРјРЅРѕСЃС‚РёВ», вЂ” РїРѕС€СѓС‚РёР»Р° РІРѕСЃРїРёС‚Р°С‚РµР»СЊРЅРёС†Р°, РїСЂРёСЃР»РѕРЅРёРІС€РёСЃСЊ СЃРїРёРЅРѕР№ Рє СЃС‚РµРЅРµ Рё РїСЂРёРїРѕРґРЅСЏРІ С€Р»СЏРїСѓ. В«РќРµ РїРѕР·РІРѕР»СЏР№ РјРЅРµ С‚РµР±СЏ РѕСЃС‚Р°РЅР°РІР»РёРІР°С‚СЊВ».
 
-«Н-но…», — начала Элли, но, поняв, что выступление, вероятно, уже закончилось, медленно встала с кровати и показала своё мокрое состояние старшей женщине. Прошло немного времени, прежде чем другие девочки неохотно последовали её примеру.
+В«Рќ-РЅРѕвЂ¦В», вЂ” РЅР°С‡Р°Р»Р° Р­Р»Р»Рё, РЅРѕ, РїРѕРЅСЏРІ, С‡С‚Рѕ РІС‹СЃС‚СѓРїР»РµРЅРёРµ, РІРµСЂРѕСЏС‚РЅРѕ, СѓР¶Рµ Р·Р°РєРѕРЅС‡РёР»РѕСЃСЊ, РјРµРґР»РµРЅРЅРѕ РІСЃС‚Р°Р»Р° СЃ РєСЂРѕРІР°С‚Рё Рё РїРѕРєР°Р·Р°Р»Р° СЃРІРѕС‘ РјРѕРєСЂРѕРµ СЃРѕСЃС‚РѕСЏРЅРёРµ СЃС‚Р°СЂС€РµР№ Р¶РµРЅС‰РёРЅРµ. РџСЂРѕС€Р»Рѕ РЅРµРјРЅРѕРіРѕ РІСЂРµРјРµРЅРё, РїСЂРµР¶РґРµ С‡РµРј РґСЂСѓРіРёРµ РґРµРІРѕС‡РєРё РЅРµРѕС…РѕС‚РЅРѕ РїРѕСЃР»РµРґРѕРІР°Р»Рё РµС‘ РїСЂРёРјРµСЂСѓ.
 
-«Ну, чёрт меня побери», — ошеломлённо сказала воспитательница. «Полагаю, у дьявола есть несколько шуток в его книге».
+В«РќСѓ, С‡С‘СЂС‚ РјРµРЅСЏ РїРѕР±РµСЂРёВ», вЂ” РѕС€РµР»РѕРјР»С‘РЅРЅРѕ СЃРєР°Р·Р°Р»Р° РІРѕСЃРїРёС‚Р°С‚РµР»СЊРЅРёС†Р°. В«РџРѕР»Р°РіР°СЋ, Сѓ РґСЊСЏРІРѕР»Р° РµСЃС‚СЊ РЅРµСЃРєРѕР»СЊРєРѕ С€СѓС‚РѕРє РІ РµРіРѕ РєРЅРёРіРµВ».
 
-«ОЙ! БЛЯДЬ! СТОП!» — закричала Джекс. Одна за другой, неоготку били дубовой лопаткой по попе, пока она лежала, согнувшись на колене старшей воспитательницы. Перед ними стояли другие девушки, с красными, как Марс, попами и простыми подгузниками, крепко завязанными вокруг талии. Каждая девушка по-разному отреагировала на своё наказание, от сожаления до гнева и похоти, но каждая девушка разделяла чувство унижения, которого никогда не испытывала в своей жизни. Рядом с воспитательницей стояла Эми, лукаво улыбаясь, наблюдая за развитием событий. Она чувствовала себя полностью удовлетворённой, несмотря на свой мокрый подгузник. После того, как Джекс как следует отшлёпали и побаловали, её отправили обратно в строй к другим хулиганкам и приказали извиниться перед девушкой.
+В«РћР™! Р‘Р›РЇР”Р¬! РЎРўРћРџ!В» вЂ” Р·Р°РєСЂРёС‡Р°Р»Р° Р”Р¶РµРєСЃ. РћРґРЅР° Р·Р° РґСЂСѓРіРѕР№, РЅРµРѕРіРѕС‚РєСѓ Р±РёР»Рё РґСѓР±РѕРІРѕР№ Р»РѕРїР°С‚РєРѕР№ РїРѕ РїРѕРїРµ, РїРѕРєР° РѕРЅР° Р»РµР¶Р°Р»Р°, СЃРѕРіРЅСѓРІС€РёСЃСЊ РЅР° РєРѕР»РµРЅРµ СЃС‚Р°СЂС€РµР№ РІРѕСЃРїРёС‚Р°С‚РµР»СЊРЅРёС†С‹. РџРµСЂРµРґ РЅРёРјРё СЃС‚РѕСЏР»Рё РґСЂСѓРіРёРµ РґРµРІСѓС€РєРё, СЃ РєСЂР°СЃРЅС‹РјРё, РєР°Рє РњР°СЂСЃ, РїРѕРїР°РјРё Рё РїСЂРѕСЃС‚С‹РјРё РїРѕРґРіСѓР·РЅРёРєР°РјРё, РєСЂРµРїРєРѕ Р·Р°РІСЏР·Р°РЅРЅС‹РјРё РІРѕРєСЂСѓРі С‚Р°Р»РёРё. РљР°Р¶РґР°СЏ РґРµРІСѓС€РєР° РїРѕ-СЂР°Р·РЅРѕРјСѓ РѕС‚СЂРµР°РіРёСЂРѕРІР°Р»Р° РЅР° СЃРІРѕС‘ РЅР°РєР°Р·Р°РЅРёРµ, РѕС‚ СЃРѕР¶Р°Р»РµРЅРёСЏ РґРѕ РіРЅРµРІР° Рё РїРѕС…РѕС‚Рё, РЅРѕ РєР°Р¶РґР°СЏ РґРµРІСѓС€РєР° СЂР°Р·РґРµР»СЏР»Р° С‡СѓРІСЃС‚РІРѕ СѓРЅРёР¶РµРЅРёСЏ, РєРѕС‚РѕСЂРѕРіРѕ РЅРёРєРѕРіРґР° РЅРµ РёСЃРїС‹С‚С‹РІР°Р»Р° РІ СЃРІРѕРµР№ Р¶РёР·РЅРё. Р СЏРґРѕРј СЃ РІРѕСЃРїРёС‚Р°С‚РµР»СЊРЅРёС†РµР№ СЃС‚РѕСЏР»Р° Р­РјРё, Р»СѓРєР°РІРѕ СѓР»С‹Р±Р°СЏСЃСЊ, РЅР°Р±Р»СЋРґР°СЏ Р·Р° СЂР°Р·РІРёС‚РёРµРј СЃРѕР±С‹С‚РёР№. РћРЅР° С‡СѓРІСЃС‚РІРѕРІР°Р»Р° СЃРµР±СЏ РїРѕР»РЅРѕСЃС‚СЊСЋ СѓРґРѕРІР»РµС‚РІРѕСЂС‘РЅРЅРѕР№, РЅРµСЃРјРѕС‚СЂСЏ РЅР° СЃРІРѕР№ РјРѕРєСЂС‹Р№ РїРѕРґРіСѓР·РЅРёРє. РџРѕСЃР»Рµ С‚РѕРіРѕ, РєР°Рє Р”Р¶РµРєСЃ РєР°Рє СЃР»РµРґСѓРµС‚ РѕС‚С€Р»С‘РїР°Р»Рё Рё РїРѕР±Р°Р»РѕРІР°Р»Рё, РµС‘ РѕС‚РїСЂР°РІРёР»Рё РѕР±СЂР°С‚РЅРѕ РІ СЃС‚СЂРѕР№ Рє РґСЂСѓРіРёРј С…СѓР»РёРіР°РЅРєР°Рј Рё РїСЂРёРєР°Р·Р°Р»Рё РёР·РІРёРЅРёС‚СЊСЃСЏ РїРµСЂРµРґ РґРµРІСѓС€РєРѕР№.
 
-«Извините», — хором сказали четверо.
+В«РР·РІРёРЅРёС‚РµВ», вЂ” С…РѕСЂРѕРј СЃРєР°Р·Р°Р»Рё С‡РµС‚РІРµСЂРѕ.
 
-«Извинения приняты», — ответила Эми. После этого инцидента и сделанных ею фотографий она гордилась тем, что полностью контролирует своих бывших обидчиков.
+В«РР·РІРёРЅРµРЅРёСЏ РїСЂРёРЅСЏС‚С‹В», вЂ” РѕС‚РІРµС‚РёР»Р° Р­РјРё. РџРѕСЃР»Рµ СЌС‚РѕРіРѕ РёРЅС†РёРґРµРЅС‚Р° Рё СЃРґРµР»Р°РЅРЅС‹С… РµСЋ С„РѕС‚РѕРіСЂР°С„РёР№ РѕРЅР° РіРѕСЂРґРёР»Р°СЃСЊ С‚РµРј, С‡С‚Рѕ РїРѕР»РЅРѕСЃС‚СЊСЋ РєРѕРЅС‚СЂРѕР»РёСЂСѓРµС‚ СЃРІРѕРёС… Р±С‹РІС€РёС… РѕР±РёРґС‡РёРєРѕРІ.
 
-Остальная часть лагеря разыгралась интересно. Помимо событий, которые развернулись той ночью, обидчики продолжали мочиться по ночам, только на этот раз в подгузники. И наоборот, ночное недержание мочи у Эми, казалось, прекратилось, по крайней мере на время, что ещё больше смутило группу. Более того, гипноз также имел дополнительный эффект ослабления контроля над мочевым пузырём у девочек и в дневное время, что приводило к случайным несчастным случаям и унизительным проверкам подгузников вожатыми. Хотя она не проявляла любви к большинству из них, Эми действительно чувствовала себя виноватой из-за того, что поставила Кару в такое же положение, как и всех остальных.
+РћСЃС‚Р°Р»СЊРЅР°СЏ С‡Р°СЃС‚СЊ Р»Р°РіРµСЂСЏ СЂР°Р·С‹РіСЂР°Р»Р°СЃСЊ РёРЅС‚РµСЂРµСЃРЅРѕ. РџРѕРјРёРјРѕ СЃРѕР±С‹С‚РёР№, РєРѕС‚РѕСЂС‹Рµ СЂР°Р·РІРµСЂРЅСѓР»РёСЃСЊ С‚РѕР№ РЅРѕС‡СЊСЋ, РѕР±РёРґС‡РёРєРё РїСЂРѕРґРѕР»Р¶Р°Р»Рё РјРѕС‡РёС‚СЊСЃСЏ РїРѕ РЅРѕС‡Р°Рј, С‚РѕР»СЊРєРѕ РЅР° СЌС‚РѕС‚ СЂР°Р· РІ РїРѕРґРіСѓР·РЅРёРєРё. Р РЅР°РѕР±РѕСЂРѕС‚, РЅРѕС‡РЅРѕРµ РЅРµРґРµСЂР¶Р°РЅРёРµ РјРѕС‡Рё Сѓ Р­РјРё, РєР°Р·Р°Р»РѕСЃСЊ, РїСЂРµРєСЂР°С‚РёР»РѕСЃСЊ, РїРѕ РєСЂР°Р№РЅРµР№ РјРµСЂРµ РЅР° РІСЂРµРјСЏ, С‡С‚Рѕ РµС‰С‘ Р±РѕР»СЊС€Рµ СЃРјСѓС‚РёР»Рѕ РіСЂСѓРїРїСѓ. Р‘РѕР»РµРµ С‚РѕРіРѕ, РіРёРїРЅРѕР· С‚Р°РєР¶Рµ РёРјРµР» РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅС‹Р№ СЌС„С„РµРєС‚ РѕСЃР»Р°Р±Р»РµРЅРёСЏ РєРѕРЅС‚СЂРѕР»СЏ РЅР°Рґ РјРѕС‡РµРІС‹Рј РїСѓР·С‹СЂС‘Рј Сѓ РґРµРІРѕС‡РµРє Рё РІ РґРЅРµРІРЅРѕРµ РІСЂРµРјСЏ, С‡С‚Рѕ РїСЂРёРІРѕРґРёР»Рѕ Рє СЃР»СѓС‡Р°Р№РЅС‹Рј РЅРµСЃС‡Р°СЃС‚РЅС‹Рј СЃР»СѓС‡Р°СЏРј Рё СѓРЅРёР·РёС‚РµР»СЊРЅС‹Рј РїСЂРѕРІРµСЂРєР°Рј РїРѕРґРіСѓР·РЅРёРєРѕРІ РІРѕР¶Р°С‚С‹РјРё. РҐРѕС‚СЏ РѕРЅР° РЅРµ РїСЂРѕСЏРІР»СЏР»Р° Р»СЋР±РІРё Рє Р±РѕР»СЊС€РёРЅСЃС‚РІСѓ РёР· РЅРёС…, Р­РјРё РґРµР№СЃС‚РІРёС‚РµР»СЊРЅРѕ С‡СѓРІСЃС‚РІРѕРІР°Р»Р° СЃРµР±СЏ РІРёРЅРѕРІР°С‚РѕР№ РёР·-Р·Р° С‚РѕРіРѕ, С‡С‚Рѕ РїРѕСЃС‚Р°РІРёР»Р° РљР°СЂСѓ РІ С‚Р°РєРѕРµ Р¶Рµ РїРѕР»РѕР¶РµРЅРёРµ, РєР°Рє Рё РІСЃРµС… РѕСЃС‚Р°Р»СЊРЅС‹С….
 
-В конце концов, хотя она была соучастницей, она на самом деле ничего не делала и была той, кто сказал другим девочкам прекратить. Перед возвращением в школу они встретились в частном порядке и помирились, став друзьями. Кара пообещала покинуть банду задир и сохранить свой план в тайне в обмен на то, что её собственный гипноз будет отменён, а её фотографии будут удалены. В первый день учёбы Эми и Кара были на пути к тому, чтобы стать близкими друзьями, в то время как Джекс, Элли и Зои были оставлены в подгузниках своими семьями. Хотя никто не осмеливался ничего сказать из-за риска подвергнуться преследованиям, громкий хруст под их одеждой не оставлял места для воображения.
+Р’ РєРѕРЅС†Рµ РєРѕРЅС†РѕРІ, С…РѕС‚СЏ РѕРЅР° Р±С‹Р»Р° СЃРѕСѓС‡Р°СЃС‚РЅРёС†РµР№, РѕРЅР° РЅР° СЃР°РјРѕРј РґРµР»Рµ РЅРёС‡РµРіРѕ РЅРµ РґРµР»Р°Р»Р° Рё Р±С‹Р»Р° С‚РѕР№, РєС‚Рѕ СЃРєР°Р·Р°Р» РґСЂСѓРіРёРј РґРµРІРѕС‡РєР°Рј РїСЂРµРєСЂР°С‚РёС‚СЊ. РџРµСЂРµРґ РІРѕР·РІСЂР°С‰РµРЅРёРµРј РІ С€РєРѕР»Сѓ РѕРЅРё РІСЃС‚СЂРµС‚РёР»РёСЃСЊ РІ С‡Р°СЃС‚РЅРѕРј РїРѕСЂСЏРґРєРµ Рё РїРѕРјРёСЂРёР»РёСЃСЊ, СЃС‚Р°РІ РґСЂСѓР·СЊСЏРјРё. РљР°СЂР° РїРѕРѕР±РµС‰Р°Р»Р° РїРѕРєРёРЅСѓС‚СЊ Р±Р°РЅРґСѓ Р·Р°РґРёСЂ Рё СЃРѕС…СЂР°РЅРёС‚СЊ СЃРІРѕР№ РїР»Р°РЅ РІ С‚Р°Р№РЅРµ РІ РѕР±РјРµРЅ РЅР° С‚Рѕ, С‡С‚Рѕ РµС‘ СЃРѕР±СЃС‚РІРµРЅРЅС‹Р№ РіРёРїРЅРѕР· Р±СѓРґРµС‚ РѕС‚РјРµРЅС‘РЅ, Р° РµС‘ С„РѕС‚РѕРіСЂР°С„РёРё Р±СѓРґСѓС‚ СѓРґР°Р»РµРЅС‹. Р’ РїРµСЂРІС‹Р№ РґРµРЅСЊ СѓС‡С‘Р±С‹ Р­РјРё Рё РљР°СЂР° Р±С‹Р»Рё РЅР° РїСѓС‚Рё Рє С‚РѕРјСѓ, С‡С‚РѕР±С‹ СЃС‚Р°С‚СЊ Р±Р»РёР·РєРёРјРё РґСЂСѓР·СЊСЏРјРё, РІ С‚Рѕ РІСЂРµРјСЏ РєР°Рє Р”Р¶РµРєСЃ, Р­Р»Р»Рё Рё Р—РѕРё Р±С‹Р»Рё РѕСЃС‚Р°РІР»РµРЅС‹ РІ РїРѕРґРіСѓР·РЅРёРєР°С… СЃРІРѕРёРјРё СЃРµРјСЊСЏРјРё. РҐРѕС‚СЏ РЅРёРєС‚Рѕ РЅРµ РѕСЃРјРµР»РёРІР°Р»СЃСЏ РЅРёС‡РµРіРѕ СЃРєР°Р·Р°С‚СЊ РёР·-Р·Р° СЂРёСЃРєР° РїРѕРґРІРµСЂРіРЅСѓС‚СЊСЃСЏ РїСЂРµСЃР»РµРґРѕРІР°РЅРёСЏРј, РіСЂРѕРјРєРёР№ С…СЂСѓСЃС‚ РїРѕРґ РёС… РѕРґРµР¶РґРѕР№ РЅРµ РѕСЃС‚Р°РІР»СЏР» РјРµСЃС‚Р° РґР»СЏ РІРѕРѕР±СЂР°Р¶РµРЅРёСЏ.
 
-Зои извлекла из этого максимум пользы, даже зайдя так далеко, что включила подгузники и водные виды спорта в свои кам-шоу. Элли пригрозила подать в суд на любого, кто хотя бы подумает об этом, а Джекс пообещал затоптать их до небытия. Однако, независимо от мыслей каждой из них, ни одна из пострадавших девушек не подозревала о плане мести Эми и так и не отменила гипноз, которому их подвергли в лагере Уэллспринг.
+Р—РѕРё РёР·РІР»РµРєР»Р° РёР· СЌС‚РѕРіРѕ РјР°РєСЃРёРјСѓРј РїРѕР»СЊР·С‹, РґР°Р¶Рµ Р·Р°Р№РґСЏ С‚Р°Рє РґР°Р»РµРєРѕ, С‡С‚Рѕ РІРєР»СЋС‡РёР»Р° РїРѕРґРіСѓР·РЅРёРєРё Рё РІРѕРґРЅС‹Рµ РІРёРґС‹ СЃРїРѕСЂС‚Р° РІ СЃРІРѕРё РєР°Рј-С€РѕСѓ. Р­Р»Р»Рё РїСЂРёРіСЂРѕР·РёР»Р° РїРѕРґР°С‚СЊ РІ СЃСѓРґ РЅР° Р»СЋР±РѕРіРѕ, РєС‚Рѕ С…РѕС‚СЏ Р±С‹ РїРѕРґСѓРјР°РµС‚ РѕР± СЌС‚РѕРј, Р° Р”Р¶РµРєСЃ РїРѕРѕР±РµС‰Р°Р» Р·Р°С‚РѕРїС‚Р°С‚СЊ РёС… РґРѕ РЅРµР±С‹С‚РёСЏ. РћРґРЅР°РєРѕ, РЅРµР·Р°РІРёСЃРёРјРѕ РѕС‚ РјС‹СЃР»РµР№ РєР°Р¶РґРѕР№ РёР· РЅРёС…, РЅРё РѕРґРЅР° РёР· РїРѕСЃС‚СЂР°РґР°РІС€РёС… РґРµРІСѓС€РµРє РЅРµ РїРѕРґРѕР·СЂРµРІР°Р»Р° Рѕ РїР»Р°РЅРµ РјРµСЃС‚Рё Р­РјРё Рё С‚Р°Рє Рё РЅРµ РѕС‚РјРµРЅРёР»Р° РіРёРїРЅРѕР·, РєРѕС‚РѕСЂРѕРјСѓ РёС… РїРѕРґРІРµСЂРіР»Рё РІ Р»Р°РіРµСЂРµ РЈСЌР»Р»СЃРїСЂРёРЅРі.
 
